# hspirv

./: LICENSE  README.md  spirv.cabal
src/SpirV/: Builder.hs  Instructions.hs  PrettyPrint.hs
src/SpirV/Binary/: Serialize.hs
src/SpirV/Builder/: Raw.hs  Types.hs
src/SpirV/Builder/Types/: Internal.hs
test/: spirvtest.cabal
test/src/: Main.hs  Program1.hs  Program2.hs
