name:                spirvtest
version:             0.1.0.0
synopsis:            SPIR-V test program
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Steven Smith
maintainer:          guntir@teamclerks.net
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable spirvtest
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , text >=1.2 && <1.3
                     , containers >=0.5 && <0.6
                     , bytestring >=0.10 && <0.11
                     , spirv
  hs-source-dirs:      src
  default-language:    Haskell2010
